# libuv

./: .gitmodules  BuildToolsVersion.txt  README.md  build-native.cmd  build-native.sh  build-packages.cmd  build-packages.sh  dir.props  dir.targets  dir.traversal.targets
Tools-Override/: tests.targets
pkg/: descriptions.json
pkg/Libuv/: Libuv.pkgproj  Libuv.props
src/: CMakeLists.txt
